replace javax.xml.DatatypeConverter with java.util.Base64 to make it work with Java 9+